<resources>
    <string name="accent_colour">Accent Colour</string>
    <string name="app_name">Simple Material Notes</string>
    <string name="launcher_title">Simple Notes</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="background_colour">Background Colour</string>
    <string name="colour_indicator">Colour indicator</string>
    <string name="colour_navigation_bar">Colour Navigation Bar</string>
    <string name="confirm_delete">Confirm Deletion</string>
    <string name="confirm_delete_text">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="empty_list_text">Press the button on the bottom right to add a new note!</string>
    <string name="exception">Exception: </string>
    <string name="font_colour">Font Colour</string>
    <string name="new_note">New Note</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share_to">Share to:</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="yes">Yes</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="get_note">Get Note</string>
    <string name="set_note">Set Note</string>
    <string name="note_change">Note Changed</string>
    <string name="note_title">Note Title</string>
    <string name="note_title_description">The title of the note</string>
    <string name="note_content">Note Content</string>
    <string name="note_content_description">The contents of the note</string>
    <string name="append">Append</string>
    <string name="append_text">Append text instead of overwriting</string>
    <string name="note_not_found">Note %1$s not found</string>
</resources>
